solve problem responsive main-row2 , footer and header overflow,....

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     padding: 5px;
 }
 
@@ -61,38 +62,39 @@ body {
 /*     <!-- ***** start RESOLOTION ***** --> */
 
 .resoltion {
-    min-height:10vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
- }
- 
- .brightness-box {
-    width:300px;
-    height:40px;
-    background:#f9f9f9;
-    border-radius:8px;
-    padding:0 10px;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
- }
- 
- .brightness-box i {
-    margin:0 5px;
- }
- 
- .brightness-box  input{
+    min-height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.brightness-box {
+    width: 300px;
+    height: 40px;
+    background: #f9f9f9;
+    border-radius: 8px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.brightness-box i {
+    margin: 0 5px;
+}
+
+.brightness-box input {
     cursor: move;
- }
- 
- #range {
-    width:100%;
-    height:3px;
-    -webkit-appearance:none;
-    background:#0a85ff;
-    outline:none;
- }
+}
+
+#range {
+    width: 100%;
+    height: 3px;
+    -webkit-appearance: none;
+    background: #0a85ff;
+    outline: none;
+}
+
 /*     <!-- ***** end   RESOLOTION ***** --> */
 
 /*     <!-- ***** start switch ***** --> */
@@ -144,14 +146,15 @@ body {
 
 /*     <!-- ***** start header ***** --> */
 .header {
-    height: 420px;
+    /* height: 420px; */
+    height: 100%;
     background-color: gray;
     font-size: 45px;
     text-align: center;
     display: flex;
-    background:url(../images/section-header.png) no-repeat center; 
-     background-size:cover; 
-     color: #fff;
+    background: url(../images/section-header.png) no-repeat center;
+    background-size: cover;
+    color: #fff;
 }
 
 .point {
@@ -177,7 +180,7 @@ body {
     color: #000;
     font-weight: bold;
     cursor: pointer;
-    border-bottom: 1px solid rgb(251, 81, 81) ;
+    border-bottom: 1px solid rgb(251, 81, 81);
     /* background-color: #000; */
 
 }
@@ -189,9 +192,6 @@ body {
 /*     <!-- ***** end   header ***** --> */
 
 
-/*     <!-- ***** color ***** --> */
-/*     <!-- ***** color ***** --> */
-/*     <!-- ***** color ***** --> */
 /*     <!-- ***** color ***** --> */
 /*     <!-- ***** color ***** --> */
 .orange {
@@ -226,20 +226,42 @@ body {
 }
 
 
+
 /* box-feature */
 .box-fea {
     padding: 25px 10px;
     border-radius: 8px;
+
 }
 
 /*     <!-- ***** Row1  Start ***** --> */
-.section1 h1{
+.section1 h1 {
     text-align: center;
-
 }
+
 /*     <!-- ***** Row1  End ***** --> */
 
 /*     <!-- ***** Row2  Start ***** --> */
+.box-pos {
+    /* position: relative; */
+    min-height: 500px;
+}
+#po-tp{
+    top: 60px;
+}
+/* responsive problem */
+    @media screen and (max-width:768px)  {
+   
+    #po-tp{
+        top: 0px;
+    }
+}
+@media screen and (min-width:992px)  {
+   
+    .body {
+        overflow: hidden;
+    }
+}
 /*     <!-- ***** Row2  End ***** --> */
 
 /*     <!-- ***** Row3  Start ***** --> */
@@ -261,13 +283,15 @@ body {
     text-transform: uppercase;
 } */
 
-/*     <!-- ***** footer ***** --> */
+/*     <!-- ***** footer  Start***** --> */
 /*     <!-- ***** footer part1 ***** --> */
 .footer {
-    height: 700px;
+    /* height: 700px; */
+    height: 100%;
     background-color: gray;
     color: #fff;
     text-align: center;
+    overflow: hidden;
 }
 
 .titleEmail {
@@ -337,6 +361,8 @@ form button {
     height: 100%;
 }
 
+/*     <!-- ***** footer End ***** */
+
 /*     <!-- ***** padding ***** --> */
 .pad {
     padding: 10px 15px;
@@ -374,9 +400,11 @@ form button {
 .p-bot10 {
     padding-bottom: 50PX;
 }
+
 .p-bot20 {
     padding-bottom: 20PX;
 }
+
 .p-bot30 {
     padding-bottom: 30PX;
 }
